--- a/notebooks/LWA_MnC_prototyping.ipynb
+++ b/notebooks/LWA_MnC_prototyping.ipynb
@@ -22,6 +22,24 @@
     "Set up scripts often run on lxdlwacr. lxdlwagpu03 is also ok.\n",
     "\n",
     "Jack recommends:\n",
+    "1. Start F-engine (tested on lxdlwacr and lxdlwagpu03)\n",
+    "```\n",
+    "from lwa_f import snap2_fengine\n",
+    "f = snap2_fengine.Snap2Fengine('snap01')\n",
+    "f.cold_start_from_config('/home/ubuntu/proj/caltech-lwa/control_sw/config/lwa_corr_config.yaml')\n",
+    "```\n",
+    "2. Start X-engines\n",
+    "```\n",
+    "from lwa352_pipeline_control import Lwa352CorrelatorControl\n",
+    "p = Lwa352CorrelatorControl(['lxdlwagpu0%d' % i for i in range(1,3)]) #or however many pipelines are being used.\n",
+    "p.stop_pipelines()\n",
+    "p.start_pipelines()\n",
+    "import time; time.sleep(15) # Wait for pipelines to come up\n",
+    "p.configure_corr()\n",
+    "```\n",
+    "\n",
+    "\n",
+    "Older instructions:\n",
     "1. Program and initialize SNAPs with `lwa_snap_feng_init.py -e -s -m -i -p -o ~/proj/lwa-shell/caltech-lwa/control_sw/config/lwa_corr_config.yaml snap01`. Adding `-t` will send test data.\n",
     "2. Fire up the GPU pipelines with `lwa352-start-pipeline.sh 0 1` on gpu01 and gpu02 (possibly killing existing pipelines first). One server can run up to 4 pipelines (192 channels x ~24 kHz each). All servers needed to run 32 pipelines with 73MHz bandwidth.\n",
     "3. Watch X-engine log files until things are running with names `<hostname>.<pipeline_id>.log`\n",
@@ -1067,9 +1085,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mcs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-dff6cf298f99>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# gpu03 runs capture server\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mmcs\u001b[0m \u001b[0;31m#  works in ovro_data_recorder directory\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcommon\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLWATime\u001b[0m \u001b[0;31m#  works in ovro_data_recorder directory\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtimedelta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'mcs'"
+     ]
+    }
+   ],
    "source": [
     "# gpu03 runs capture server\n",
     "import mcs #  works in ovro_data_recorder directory\n",
