pulling code into mnc

--- a/notebooks/LWA_dashboard.ipynb
+++ b/notebooks/LWA_dashboard.ipynb
@@ -1943,7 +1943,8 @@
     "\n",
     "from lwautils import lwa_arx\n",
     "from lwautils import TimeoutException\n",
-    "from lwa_antpos import reading, mapping, mcs, common\n",
+    "from lwa_antpos import reading, mapping\n",
+    "from mnc import mcs, common\n",
     "import dsautils.cnf as cnf\n",
     "from lwa_f import snap2_fengine, snap2_feng_etcd_client\n",
     "from lwa352_pipeline_control import Lwa352PipelineControl"
