--- a/notebooks/LWA_startup_test.ipynb
+++ b/notebooks/LWA_startup_test.ipynb
@@ -38,8 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "snap2names = ['snap01']  # f-eng\n",
-    "feng_config = '/home/ubuntu/proj/caltech-lwa/control_sw/config/lwa_corr_config.yaml'  # f-eng and x-eng\n",
+    "snap2names = [f'snap{i:02}' for i in range(1, 12)]  # f-eng\n",
+    "feng_config = '/home/ubuntu/proj/lwa-shell/caltech-lwa/control_sw/config/lwa_corr_config.yaml'  # f-eng and x-eng\n",
     "xhosts = ['lxdlwagpu02']  # x-eng\n",
     "npipeline = 4  # x-eng\n",
     "drips = ['10.41.0.25', '10.41.0.41']  # data recorder (two ips for lxdlwagpu09)\n",
@@ -306,6 +306,7 @@
    "source": [
     "for snap2name in snap2names:\n",
     "    lwa_f = snap2_fengine.Snap2Fengine(snap2name)\n",
+    "#    lwa_f.program()\n",
     "    lwa_f.cold_start_from_config(feng_config)"
    ]
   },
@@ -411,9 +412,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:mnc]",
+   "display_name": "casa",
    "language": "python",
-   "name": "conda-env-mnc-py"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -425,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
