--- a/notebooks/LWA_startup_test.ipynb
+++ b/notebooks/LWA_startup_test.ipynb
@@ -81,7 +81,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -429,7 +429,7 @@
     "for snap2name in snap2names:\n",
     "    lwa_f = snap2_fengine.Snap2Fengine(snap2name)\n",
     "#    lwa_f.program()\n",
-    "    lwa_f.cold_start_from_config(feng_config)"
+    "    lwa_f.cold_start_from_config(feng_config, program=False)  # "
    ]
   },
   {
