adding some detail to help understand data recorders

--- a/notebooks/LWA_dashboard.ipynb
+++ b/notebooks/LWA_dashboard.ipynb
@@ -109,7 +109,7 @@
     "        df_arx.set_index('adr-ch', inplace=True)\n",
     "\n",
     "    df_a_pane = pn.widgets.Tabulator(df_arx, layout='fit_data_table', pagination='remote',\n",
-    "                                     width=850, page_size=20)\n",
+    "                                     width=900, page_size=20)\n",
     "    return df_a_pane\n",
     "\n",
     "\n",
@@ -165,7 +165,7 @@
     "        df_f.set_index('name', inplace=True)\n",
     "        \n",
     "    df_f_pane = pn.widgets.Tabulator(df_f, layout='fit_data_table', pagination='remote',\n",
-    "                                     width=850, page_size=20)\n",
+    "                                     width=900, page_size=20)\n",
     "\n",
     "    return df_f_pane\n",
     "\n",
@@ -193,34 +193,34 @@
     "    for host in xhosts:\n",
     "        for pipeline in range(npipeline):\n",
     "            lwa_x = Lwa352PipelineControl(pipeline_id=pipeline, etcdhost=common.ETCD_HOST, host=host)\n",
+    "            st = lwa_x.corr.get_bifrost_status()\n",
+    "            stats = st['stats']\n",
+    "            t_now = time.Time.now().unix\n",
+    "            name = f'{host}-{pipeline}'\n",
+    "            dd_x = {'name': name}\n",
+    "            dd_x['mp_age'] = t_now-st['time']\n",
+    "            dd_x['state'] = stats['state']\n",
     "            if lwa_x.pipeline_is_up():\n",
-    "                st = lwa_x.corr.get_bifrost_status()\n",
-    "                t_now = time.Time.now().unix\n",
-    "                stats = st['stats']\n",
-    "                name = f'{host}-{pipeline}'\n",
-    "                dd_xstatus = {'name': name}\n",
-    "                dd_xstatus['age (s)'] = int(t_now-st['time'])\n",
-    "                dd_x = {'name': name}\n",
+    "#                dd_xstatus = {'name': name}\n",
+    "#                dd_xstatus['age (s)'] = int(t_now-st['time'])\n",
     "                dd_x['gbps'] = st['gbps']\n",
-    "                dd_x['mp_age'] = t_now-st['time']\n",
     "\n",
     "                if len(stats) > 1:\n",
-    "                    dd_xstatus['ready'] = stats['state'] == 'running'\n",
+    "#                    dd_xstatus['ready'] = stats['state'] == 'running'\n",
     "                    if stats['state'] == 'running':\n",
     "                        dd_x['curr_sample'] = stats['curr_sample']\n",
-    "                        dd_x['state'] = stats['state']\n",
-    "                dd_xs.append(dd_x)\n",
-    "\n",
-    "                dd_statuses.append(dd_xstatus)\n",
+    "#                dd_statuses.append(dd_xstatus)\n",
     "            else:\n",
     "                print(f'Pipeline for {host}:{pipeline} is not up')\n",
+    "\n",
+    "            dd_xs.append(dd_x)\n",
     "\n",
     "    df_x = pd.DataFrame.from_dict(dd_xs)\n",
     "    if any(df_x):\n",
     "        df_x.set_index('name', inplace=True)\n",
     "\n",
     "    df_x_pane = pn.widgets.Tabulator(df_x, layout='fit_data_table', pagination='remote',\n",
-    "                                     width=850, page_size=20)\n",
+    "                                     width=900, page_size=20)\n",
     "\n",
     "    return df_x_pane\n",
     "\n",
@@ -264,12 +264,12 @@
     "            tbfree = lwa_dr.read_monitor_point('storage/active_disk_free').value/1e12\n",
     "            activedir = lwa_dr.read_monitor_point('storage/active_directory').value\n",
     "\n",
-    "        info = lwa_dr.read_monitor_point('info')\n",
+    "        infostring = lwa_dr.read_monitor_point('info').value + ', ' + lwa_dr.read_monitor_point('op-type').value\n",
     "\n",
     "        dd_d = {'name': f'{drid}', 'age (s)': int(t_now-t_mp), 'rx_rate': int(rx_rate), #'rx_miss': rx_missing,\n",
     "                'pipeline_lag': pipeline_lag, 'load_1m': load_average1,\n",
     "                'Disk free (TB)': tbfree, 'Active dir': activedir,\n",
-    "                'info': info.value}\n",
+    "                'info': infostring}\n",
     "        dd_ds.append(dd_d)\n",
     "    else:\n",
     "        lwa_dr = None\n",
@@ -279,14 +279,14 @@
     "        df_d.set_index('name', inplace=True)\n",
     "\n",
     "    df_d_pane = pn.widgets.Tabulator(df_d, layout='fit_data_table', pagination='remote',\n",
-    "                                     width=850, page_size=20)\n",
+    "                                     width=900, page_size=20)\n",
     "\n",
     "    return df_d_pane\n",
     "\n",
     "\n",
     "def build_plot(antnum):\n",
     "    if isinstance(antnum, int) and antnum > 0:\n",
-    "        plot_pane = pn.pane.JPG(f'/home/ubuntu/data/plots/{antnum:03}.jpg', width=850)\n",
+    "        plot_pane = pn.pane.JPG(f'/home/ubuntu/data/plots/{antnum:03}.jpg', width=900)\n",
     "    else:\n",
     "        plot_pane = None\n",
     "\n",
@@ -300,21 +300,8 @@
     "        cl = mcs.Client(drname)\n",
     "        data_baselines = cl.read_monitor_point('diagnostics/baselines').value\n",
     "        pane_baselines = pn.pane.PNG(display.Image(mcs.ImageMonitorPoint._decode_image_data(data_baselines)),\n",
-    "                                     width=850)\n",
+    "                                     width=900)\n",
     "    return pane_baselines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    recorders = con.conf['dr']['recorders']\n",
-    "    if 'drvs' in recorders:\n",
-    "        recorders.remove('drvs')\n",
-    "        for num in con.drvnums[::2]:  # one per pair\n",
-    "            recorders.append('drvs'+str(num))\n"
    ]
   },
   {
@@ -397,6 +384,13 @@
    "source": [
     "mini_dashboard.servable(title='OVRO-LWA dashboard')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
