putting png pane back

--- a/notebooks/LWA_dashboard.ipynb
+++ b/notebooks/LWA_dashboard.ipynb
@@ -373,7 +373,7 @@
     "header_f = pn.pane.Markdown('##Plots', width=500)\n",
     "plot_spec_pane = pn.Column(pn.Column(ant_filter), pn.panel(pn.bind(build_plot, ant_filter)), width=500)\n",
     "plot_dr_pane = pn.Column(pn.Column(dr_filter), pn.panel(pn.bind(build_drvbl, dr_filter)), width=500)\n",
-    "mini_dashboard = pn.Column(dashboard_title, tabs, header_f, plot_dr_pane, width=500)"
+    "mini_dashboard = pn.Column(dashboard_title, tabs, header_f, plot_dr_pane, plot_spec_pane, width=500)"
    ]
   },
   {
