adding corr_num to dashboard

--- a/notebooks/LWA_dashboard.ipynb
+++ b/notebooks/LWA_dashboard.ipynb
@@ -2076,9 +2076,9 @@
    "outputs": [],
    "source": [
     "df_cnf_read = reading.read_antpos_etcd()\n",
-    "df_cnf = df_cnf_read[['snap2_hostname', 'snap2_chassis', 'snap2_location', 'fmc', 'pola_digitizer_channel',\n",
+    "df_cnf = df_cnf_read[['snap2_hostname', 'snap2_chassis', 'snap2_location', 'pola_digitizer_channel',\n",
     "                      'polb_digitizer_channel', 'arx_address', 'pola_arx_channel', 'polb_arx_channel',\n",
-    "                      'pola_fee', 'polb_fee']]\n",
+    "                      'pola_fee', 'polb_fee', 'corr_num']]\n",
     "df_cnf_pane = pn.widgets.Tabulator(df_cnf, layout='fit_data_table', pagination='remote', page_size=20)"
    ]
   },
